--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -29,6 +29,7 @@ tile.tomato.name=Tomaten
 tile.salad.name=Salade
 //tile.cheese_block.name=<newline>
 //tile.unstable_stone.name=<newline>
+//tile.rewind_block.name=<newline>
 
 tile.question_block.name=?-blok
 tile.empty_block.name=Leeg blok
