--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -97,6 +97,7 @@ tile.black_candy_cane_pillar.name=Black Candy Cane Pillar
 
 tile.green_hill_grass_block.name=Green Hill Grass Block
 tile.green_hill_dirt.name=Green Hill Dirt
+tile.marble_zone_stone.name=Marble Zone Stone
 tile.yellow_studiopolis_clapper.name=Yellow Studiopolis Clapper
 tile.blue_studiopolis_clapper.name=Blue Studiopolis Clapper
 
