--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -97,6 +97,7 @@ tile.purple_candy_cane_pillar.name=piler de bobon de novel sauf que c pourpr
 
 //tile.green_hill_grass_block.name=<newline>
 //tile.green_hill_dirt.name=<newline>
+//tile.marble_zone_stone.name=<newline>
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
