--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -97,6 +97,7 @@ tile.black_candy_cane_pillar.name=Black Candy Cane Pillar
 
 //tile.green_hill_grass_block.name=<newline>
 //tile.green_hill_dirt.name=<newline>
+//tile.marble_zone_stone.name=<newline>
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
 
