--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -97,6 +97,7 @@ tile.black_candy_cane_pillar.name=Pilar de bastón de caramelo negro
 
 tile.green_hill_grass_block.name=Bloque de césped de Green Hill
 tile.green_hill_dirt.name=Tierra de Green Hill
+//tile.marble_zone_stone.name=<newline>
 tile.yellow_studiopolis_clapper.name=Badajo de Studiópolis amarillo
 tile.blue_studiopolis_clapper.name=Badajo de Studiópolis azul
 
