--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -97,6 +97,7 @@ tile.black_candy_cane_pillar.name=Zwarte zuurstokpillaar
 
 //tile.green_hill_grass_block.name=<newline>
 //tile.green_hill_dirt.name=<newline>
+//tile.marble_zone_stone.name=<newline>
 tile.yellow_studiopolis_clapper.name=Gele studiopolisklepel
 tile.blue_studiopolis_clapper.name=Blauwe studiopolisklepel
 
