Added Black, Cyan, Gray, Light Blue, Light Gray, Lime, Magenta, Orange, Pink, White

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -45,9 +45,19 @@ tile.boomerang_flower.name=Bumerangblume
 tile.cloud_flower.name=Wolkenblume
 tile.gold_flower.name=Goldeneblume
 tile.blue_mushroom.name=Blauer Pilz
+tile.light_blue_mushroom.name=Hellblauer Pilz
+tile.cyan_mushroom.name=Türkiser Pilz
 tile.green_mushroom.name=Grüner Pilz
+tile.lime_mushroom.name=Hellgrüner Pilz
 tile.yellow_mushroom.name=Gelber Pilz
-tile.purple_mushroom.name=Lila Pilz
+tile.orange_mushroom.name=Orangener Pilz
+tile.pink_mushroom.name=Pinker Pilz
+tile.magenta_mushroom.name=Magenta Pilz
+tile.purple_mushroom.name=Violetter Pilz
+tile.white_mushroom.name=Weißer Pilz
+tile.light_gray_mushroom.name=Hellgrauer Pilz
+tile.gray_mushroom.name=Grauer Pilz
+tile.black_mushroom.name=Schwarzer Pilz
 tile.blue_mushroom_block.name=Blauer Pilzblock
 tile.green_mushroom_block.name=Grüner Pilzblock
 tile.yellow_mushroom_block.name=Gelber Pilzblock
