--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -45,9 +45,19 @@ tile.boomerang_flower.name=Boomerang Flower
 tile.cloud_flower.name=Cloud Flower
 tile.gold_flower.name=Gold Flower
 tile.blue_mushroom.name=Blue Mushroom
+tile.light_blue_mushroom.name=Light Blue Mushroom
+tile.cyan_mushroom.name=Cyan Mushroom
 tile.green_mushroom.name=Green Mushroom
+tile.lime_mushroom.name=Lime Mushroom
 tile.yellow_mushroom.name=Yellow Mushroom
+tile.orange_mushroom.name=Orange Mushroom
+tile.pink_mushroom.name=Pink Mushroom
+tile.magenta_mushroom.name=Magenta Mushroom
 tile.purple_mushroom.name=Purple Mushroom
+tile.white_mushroom.name=White Mushroom
+tile.light_gray_mushroom.name=Light Grey Mushroom
+tile.gray_mushroom.name=Grey Mushroom
+tile.white_mushroom.name=Black Mushroom
 tile.blue_mushroom_block.name=Blue Mushroom Block
 tile.green_mushroom_block.name=Green Mushroom Block
 tile.yellow_mushroom_block.name=Yellow Mushroom Block
