--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -45,16 +45,26 @@ tile.boomerang_flower.name=Flor boomerang
 tile.cloud_flower.name=Flor nube
 tile.gold_flower.name=Flor dorada
 tile.blue_mushroom.name=Champiñón azul
+tile.light_blue_mushroom.name=Champiñón azul claro
+tile.cyan_mushroom.name=Champiñón cian
 tile.green_mushroom.name=Champiñón verde
+tile.lime_mushroom.name=Champiñón lima
 tile.yellow_mushroom.name=Champiñón amarillo
-tile.purple_mushroom.name=Champiñón púrpura
+tile.orange_mushroom.name=Champiñón naranja
+tile.pink_mushroom.name=Champiñón rosa
+tile.magenta_mushroom.name=Champiñón magenta
+tile.purple_mushroom.name=Champiñón violeta
+tile.white_mushroom.name=Champiñón blanco
+tile.light_gray_mushroom.name=Champiñón gris claro
+tile.gray_mushroom.name=Champiñón gris
+tile.black_mushroom.name=Champiñón negro
 tile.blue_mushroom_block.name=Bloque de champiñón azul
 tile.green_mushroom_block.name=Bloque de champiñón verde
 tile.yellow_mushroom_block.name=Bloque de champiñón amarillo
 tile.purple_mushroom_block.name=Bloque de champiñón púrpura
 
-tile.blue_tetris_block.name=Bloque de Tetris
-tile.light_blue_tetris_block.name=Bloque de Tetris azul
+tile.blue_tetris_block.name=Bloque de Tetris azul
+tile.light_blue_tetris_block.name=Bloque de Tetris azul claro
 tile.cyan_tetris_block.name=Bloque de Tetris cian
 tile.green_tetris_block.name=Bloque de Tetris verde
 tile.lime_tetris_block.name=Bloque de Tetris lima
