--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -45,9 +45,19 @@ tile.boomerang_flower.name=Fleur boomerang
 tile.cloud_flower.name=Fleur nuage
 tile.gold_flower.name=Fleur d'or
 tile.blue_mushroom.name=Champignon bleu
+tile.light_blue_mushroom.name=Champignon bleu clair
+tile.cyan_mushroom.name=Champignon cyan
 tile.green_mushroom.name=Champignon vert
+tile.lime_mushroom.name=Champignon vert clair
 tile.yellow_mushroom.name=Champignon jaune
+tile.orange_mushroom.name=Champignon orange
+tile.pink_mushroom.name=Champignon rose
+tile.magenta_mushroom.name=Champignon magenta
 tile.purple_mushroom.name=Champignon violet
+tile.white_mushroom.name=Champignon blanc
+tile.light_gray_mushroom.name=Champignon gris clair
+tile.gray_mushroom.name=Champignon gris
+tile.black_mushroom.name=Champignon noir
 tile.blue_mushroom_block.name=Bloc de champignon bleu
 tile.green_mushroom_block.name=Bloc de champignon vert
 tile.yellow_mushroom_block.name=Bloc de champignon jaune
