--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -45,9 +45,19 @@ tile.boomerang_flower.name=Boomerang bloem
 tile.cloud_flower.name=Wolk bloem
 tile.gold_flower.name=Gouden Bloem
 tile.blue_mushroom.name=Blauwe paddenstoel
+tile.light_blue_mushroom.name=Lichtblauwe paddenstoel
+tile.cyan_mushroom.name=Turquoise paddenstoel
 tile.green_mushroom.name=Groene paddenstoel
-tile.yellow_mushroom.name=Gele paddenstoel
+tile.lime_mushroom.name=Lichtgroene paddenstoel
+tile.yellow_mushroom.name=Geele paddenstoel
+tile.orange_mushroom.name=Oranje paddenstoel
+tile.pink_mushroom.name=Roze paddenstoel
+tile.magenta_mushroom.name=Magenta paddenstoel
 tile.purple_mushroom.name=Paarse paddenstoel
+tile.white_mushroom.name=Wite paddenstoel
+tile.light_gray_mushroom.name=Lichtgrijse paddenstoel
+tile.gray_mushroom.name=Grijse paddenstoel
+tile.black_mushroom.name=Zwarte paddenstoel
 tile.blue_mushroom_block.name=Blauw paddenstoelenblok
 tile.green_mushroom_block.name=Groen paddenstoelenblok
 tile.yellow_mushroom_block.name=Geel paddenstoelenblok
