--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -45,9 +45,19 @@ tile.boomerang_flower.name=回旋镖花
 tile.cloud_flower.name=云花
 tile.gold_flower.name=金花
 tile.blue_mushroom.name=蓝色蘑菇
+//tile.light_blue_mushroom.name=<newline>
+//tile.cyan_mushroom.name=<newline>
 tile.green_mushroom.name=绿色蘑菇
+//tile.lime_mushroom.name=<newline>
 tile.yellow_mushroom.name=黄色蘑菇
+//tile.orange_mushroom.name=<newline>
+//tile.pink_mushroom.name=<newline>
+//tile.magenta_mushroom.name=<newline>
 tile.purple_mushroom.name=紫色蘑菇
+//tile.white_mushroom.name=<newline>
+//tile.light_gray_mushroom.name=<newline>
+//tile.gray_mushroom.name=<newline>
+//tile.black_mushroom.name=<newline>
 tile.blue_mushroom_block.name=蓝色蘑菇方块
 tile.green_mushroom_block.name=绿色蘑菇方块
 tile.yellow_mushroom_block.name=黄色蘑菇方块
