--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -44,10 +44,20 @@ tile.ice_flower.name=ɹǝʍolℲ ǝɔI
 tile.boomerang_flower.name=ɹǝʍolℲ ƃuɐɹǝɯooᗺ
 tile.cloud_flower.name=ɹǝʍolℲ pnolƆ
 tile.gold_flower.name=ɹǝʍolℲ ploפ
-tile.blue_mushroom.name=ɯooɹɥsnW ǝnlᗺ
-tile.green_mushroom.name=ɯooɹɥsnW uǝǝɹפ
-tile.yellow_mushroom.name=ɯooɹɥsnW ʍollǝ⅄
-tile.purple_mushroom.name=ɯooɹɥsnW ǝldɹnԀ
+//tile.blue_mushroom.name=<newline>
+//tile.light_blue_mushroom.name=<newline>
+//tile.cyan_mushroom.name=<newline>
+//tile.green_mushroom.name=<newline>
+//tile.lime_mushroom.name=<newline>
+//tile.yellow_mushroom.name=<newline>
+//tile.orange_mushroom.name=<newline>
+//tile.pink_mushroom.name=<newline>
+//tile.magenta_mushroom.name=<newline>
+//tile.purple_mushroom.name=<newline>
+//tile.white_mushroom.name=<newline>
+//tile.light_gray_mushroom.name=<newline>
+//tile.gray_mushroom.name=<newline>
+//tile.black_mushroom.name=<newline>
 tile.blue_mushroom_block.name=ʞɔolᗺ ɯooɹɥsnW ǝnlᗺ
 tile.green_mushroom_block.name=ʞɔolᗺ ɯooɹɥsnW uǝǝɹפ
 tile.yellow_mushroom_block.name=ʞɔolᗺ ɯooɹɥsnW ʍollǝ⅄
