--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -44,10 +44,20 @@ tile.ice_flower.name=fleu de glas
 tile.boomerang_flower.name=fleu boumrangue
 tile.cloud_flower.name=fleu nuaj
 tile.gold_flower.name=fleur dore!!
-tile.blue_mushroom.name=jampinon ble
-tile.green_mushroom.name=jampinon ver
-tile.yellow_mushroom.name=jampinon jone
-tile.purple_mushroom.name=jampinon violet
+//tile.blue_mushroom.name=<newline>
+//tile.light_blue_mushroom.name=<newline>
+//tile.cyan_mushroom.name=<newline>
+//tile.green_mushroom.name=<newline>
+//tile.lime_mushroom.name=<newline>
+//tile.yellow_mushroom.name=<newline>
+//tile.orange_mushroom.name=<newline>
+//tile.pink_mushroom.name=<newline>
+//tile.magenta_mushroom.name=<newline>
+//tile.purple_mushroom.name=<newline>
+//tile.white_mushroom.name=<newline>
+//tile.light_gray_mushroom.name=<newline>
+//tile.gray_mushroom.name=<newline>
+//tile.black_mushroom.name=<newline>
 tile.blue_mushroom_block.name=blok jampinon ble
 tile.green_mushroom_block.name=bloc jampinon ver
 tile.yellow_mushroom_block.name=bloc jampinon jon
