--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -44,10 +44,20 @@ tile.ice_flower.name=ice flow
 tile.boomerang_flower.name=triangle ting flow
 tile.cloud_flower.name=clown flow
 tile.gold_flower.name=gol flow
-tile.blue_mushroom.name=blu mush
-tile.green_mushroom.name=grin mush
-tile.yellow_mushroom.name=yolo mush
-tile.purple_mushroom.name=purpel mush
+//tile.blue_mushroom.name=<newline>
+//tile.light_blue_mushroom.name=<newline>
+//tile.cyan_mushroom.name=<newline>
+//tile.green_mushroom.name=<newline>
+//tile.lime_mushroom.name=<newline>
+//tile.yellow_mushroom.name=<newline>
+//tile.orange_mushroom.name=<newline>
+//tile.pink_mushroom.name=<newline>
+//tile.magenta_mushroom.name=<newline>
+//tile.purple_mushroom.name=<newline>
+//tile.white_mushroom.name=<newline>
+//tile.light_gray_mushroom.name=<newline>
+//tile.gray_mushroom.name=<newline>
+//tile.black_mushroom.name=<newline>
 tile.blue_mushroom_block.name=blue mush blok
 tile.green_mushroom_block.name=gren mush blok
 tile.yellow_mushroom_block.name=yolo mush blok
