Added Baldi's Head

--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -187,6 +187,8 @@ item.top_hat.name=Haut-de-forme
 
 item.ralsei_hat.name=Chapeau de Ralsei
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=Casquette de Mayro
 item.noteblock_head.name=Tête de NoteBlock
 
