--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -187,6 +187,8 @@ item.top_hat.name=Hoge hoed
 
 item.ralsei_hat.name=Ralsei's hoed
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=Mayro's pet
 item.noteblock_head.name=NoteBlock's hooft
 
