--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -187,6 +187,8 @@ item.top_hat.name=Zylinderhut
 
 item.ralsei_hat.name=Ralsei's Hut
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=Mayro's Mütze
 item.noteblock_head.name=NoteBlock's Kopf
 
