--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -187,6 +187,8 @@ item.bandana.name=Bandana
 
 item.ralsei_hat.name=Ralsei's Hat
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=Mayro's Cap
 item.noteblock_head.name=NoteBlock's Head
 
