--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -187,6 +187,8 @@ item.bandana.name=ɐuɐpuɐᗺ
 
 item.ralsei_hat.name=ʇɐH s,ᴉǝslɐᴚ
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=dɐƆ s,oɹʎɐW
 item.noteblock_head.name=pɐǝH s,ʞɔolᗺǝʇoN
 
