--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -187,6 +187,8 @@ item.top_hat.name=Top Hat
 
 item.ralsei_hat.name=Ralsei's Hat
 
+item.baldi_head.name=Baldi's Head
+
 item.mayro_cap.name=Mayro's Cap
 item.noteblock_head.name=NoteBlock's Head
 
