--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -187,6 +187,8 @@ item.top_hat.name=Sombrero de copa
 
 item.ralsei_hat.name=Sombrero de Ralsei
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=Gorra de Mayro
 item.noteblock_head.name=Cabeza de NoteBlock
 
