--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -187,6 +187,8 @@ item.bandana.name=banade
 
 item.ralsei_hat.name=chapo de ralsi
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=kaetse maryo
 item.noteblock_head.name=tete nau tblok
 
