--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -187,6 +187,8 @@ item.top_hat.name=topattopat
 
 item.ralsei_hat.name=ralzi at
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=Mayro hat
 item.noteblock_head.name=NoteBlock hed
 
