--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -187,6 +187,8 @@ item.bandana.name=手帕
 
 //item.ralsei_hat.name=<newline>
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=Mayro的帽子
 item.noteblock_head.name=NoteBlock的头
 
