--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -177,6 +177,8 @@ item.bandana.name=手帕
 
 //item.ralsei_hat.name=<newline>
 
+//item.baldi_head.name=<newline>
+
 item.mayro_cap.name=馬伊羅的帽子
 item.noteblock_head.name=NoteBlock的頭
 
