--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -45,9 +45,19 @@ tile.boomerang_flower.name=迴旋鏢花
 tile.cloud_flower.name=雲花
 //tile.gold_flower.name=<newline>
 tile.blue_mushroom.name=藍色蘑菇
+//tile.light_blue_mushroom.name=<newline>
+//tile.cyan_mushroom.name=<newline>
 tile.green_mushroom.name=綠色蘑菇
+//tile.lime_mushroom.name=<newline>
 tile.yellow_mushroom.name=黃色蘑菇
+//tile.orange_mushroom.name=<newline>
+//tile.pink_mushroom.name=<newline>
+//tile.magenta_mushroom.name=<newline>
 tile.purple_mushroom.name=紫色蘑菇
+//tile.white_mushroom.name=<newline>
+//tile.light_gray_mushroom.name=<newline>
+//tile.gray_mushroom.name=<newline>
+//tile.black_mushroom.name=<newline>
 tile.blue_mushroom_block.name=藍色蘑菇
 tile.green_mushroom_block.name=綠色蘑菇方塊
 tile.yellow_mushroom_block.name=黃色蘑菇方塊
