--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -221,6 +221,10 @@ advancements.mubble.get_vanadium.description=sɯnᴉpɐuɐʌ ǝɹᴉnbɔ∀
 advancements.mubble.get_tetris_block.title=pǝʇɔǝuuoƆ ll∀ s,ʇI
 advancements.mubble.get_tetris_block.description=ʞɔolᗺ sᴉɹʇǝ┴ ɐ uo puɐɥ ɹnoʎ ʇǝפ
 
+--- COMMANDS ---
+commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
+//commands.motion.success=<newline>
+
 --- OTHER ---
 item.cappy.secret_status=(: ˙˙˙lɐxopɐɹɐd ʍoH
 item.bandana.secret_status=¡§6lǝxᴉԀ§r 'noʎ ɹoɟ s,ʇɐɥ┴
