--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -221,6 +221,10 @@ advancements.mubble.get_vanadium.description=Acquire vanadiums
 advancements.mubble.get_tetris_block.title=It's All Connected
 advancements.mubble.get_tetris_block.description=Get your hand on a Tetris Block
 
+--- COMMANDS ---
+commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
+commands.motion.success=Changed the motion of %s to %s, %s, %s
+
 --- OTHER ---
 item.cappy.secret_status=How paradoxal... :)
 item.bandana.secret_status=That's for you, §6Pixel§r!
