--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -220,3 +220,7 @@ advancements.mubble.get_vanadium.title=Vanadios!
 advancements.mubble.get_vanadium.description=Adquiere vanadios
 advancements.mubble.get_tetris_block.title=Está todo conectado
 advancements.mubble.get_tetris_block.description=Consigue un bloque Tetris
+
+--- COMMANDS ---
+commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
+//commands.motion.success=<newline>
