--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -220,3 +220,7 @@ advancements.mubble.get_vanadium.title=purple in da poket
 advancements.mubble.get_vanadium.description=get da shiny purple thingy
 advancements.mubble.get_tetris_block.title=falin in th sky
 advancements.mubble.get_tetris_block.description=tirtris bloks fun
+
+--- COMMANDS ---
+commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
+//commands.motion.success=<newline>
