--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -220,3 +220,7 @@ advancements.mubble.get_vanadium.title=釩！
 advancements.mubble.get_vanadium.description=獲得釩
 advancements.mubble.get_tetris_block.title=連接成功
 advancements.mubble.get_tetris_block.description=手握俄羅斯方塊
+
+--- COMMANDS ---
+commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
+//commands.motion.success=<newline>
