--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -29,7 +29,7 @@ tile.footblock.name=futbloc
 //tile.salad.name=<newline>
 //tile.cheese_block.name=<newline>
 //tile.unstable_stone.name=<newline>
-//tile.rewind_block.name=<newline>
+//tile.ultimatum_portal.name=<newline>
 
 tile.question_block.name=BLOC ???? BLOOOOOC ?????????????
 tile.empty_block.name=GBJ
@@ -124,6 +124,7 @@ tile.cyan_bricks.name=nyan briks
 tile.elder_pebbles.name=old pebbL
 tile.space_matter.name=MARTIAN DIRT OoOoOoO
 
+//tile.rewind_block.name=<newline>
 tile.koretato_block.name=Koretato blok
 
 --- ITEMS ---
