--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -29,7 +29,7 @@ tile.footblock.name=足球块
 //tile.salad.name=<newline>
 //tile.cheese_block.name=<newline>
 //tile.unstable_stone.name=<newline>
-//tile.rewind_block.name=<newline>
+//tile.ultimatum_portal.name=<newline>
 
 tile.question_block.name=问号块
 tile.empty_block.name=钢块
@@ -124,6 +124,7 @@ tile.cyan_bricks.name=青色砖块
 tile.elder_pebbles.name=远古鹅卵石
 tile.space_matter.name=太空物质
 
+//tile.rewind_block.name=<newline>
 tile.koretato_block.name=Koretato块
 
 --- ITEMS ---
