--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -28,8 +28,8 @@ tile.black_cloud_block.name=Schwarzer Wolkenblock
 tile.tomato.name=Tomaten
 tile.salad.name=Salat
 tile.cheese_block.name=Käseblock
-//tile.unstable_stone.name=<newline>
-//tile.ultimatum_portal.name=<newline>
+tile.unstable_stone.name=Instabiler Stein
+tile.ultimatum_portal.name=Ultimatum-Portal
 
 tile.question_block.name=? Block
 tile.empty_block.name=Leerer Block
@@ -107,12 +107,12 @@ tile.black_candy_cane_pillar.name=Schwarze Zuckerstangensäule
 
 tile.green_hill_grass_block.name=Grüner Hügelgrassblock
 tile.green_hill_dirt.name=Grüne Hügelerde
-//tile.marble_zone_stone.name=<newline>
+tile.marble_zone_stone.name=Marble-Zonenstein
 tile.yellow_studiopolis_clapper.name=Gelbe Studiopolis-Filmklappe
 tile.blue_studiopolis_clapper.name=Blaue Studiopolis-Filmklappe
 
 tile.scarlet_grass_block.name=Scharlachroter Grassblock
-//tile.scarlet_grass.name=<newline>
+tile.scarlet_grass.name=Scharlachrotes Grass
 tile.scarlet_mushroom.name=Scharlachroter Pilz
 tile.scarlet_orchid.name=Scharlachrote Orchidee
 
@@ -124,7 +124,7 @@ tile.cyan_brick_stairs.name=Türkise Ziegeltreppe
 tile.elder_pebbles.name=Elder Pebbles
 tile.space_matter.name=Space Matter
 
-//tile.rewind_block.name=<newline>
+tile.rewind_block.name=Rückspul-Block
 tile.koretato_block.name=Koretato-Block
 
 --- ITEMS ---
@@ -144,7 +144,7 @@ item.cheese.name=Käse
 item.super_mushroom.name=Super-Pilz
 item.peach.name=Pfirsich
 item.cape_feather.name=Federumhang
-//item.super_cape_feather.name=<newline>
+item.super_cape_feather.name=Super Federumhang
 item.super_star.name=Super Stern
 item.yellow_coin.name=Gelbe Münze
 item.red_coin.name=Rote Münze
@@ -188,7 +188,7 @@ item.top_hat.name=Zylinderhut
 
 item.ralsei_hat.name=Ralsei's Hut
 
-//item.baldi_head.name=<newline>
+item.baldi_head.name=Baldi's Hut
 
 item.mayro_cap.name=Mayro's Mütze
 item.noteblock_head.name=NoteBlock's Kopf
@@ -224,7 +224,7 @@ advancements.mubble.get_tetris_block.description=Halte einen Tetris-Block in dei
 
 --- COMMANDS ---
 commands.motion.usage=/motion <entity> <set|add> [dX] [dY] [dZ]
-//commands.motion.success=<newline>
+commands.motion.success=Ändert die Bewegung von %s zu %s, %s, %s
 
 --- OTHER ---
 item.cappy.secret_status=Wie widersprüchlich... :)
