--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -123,6 +123,7 @@ tile.cyan_bricks.name=brik sian
 //tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=vieu galai come su la plaj de diepp
 tile.space_matter.name=matiare martiéne
+//tile.space_obsidian.name=<newline>
 
 //tile.rewind_block.name=<newline>
 tile.koretato_block.name=patete qui vi
