--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -123,6 +123,7 @@ tile.cyan_bricks.name=sʞɔᴉɹᗺ uɐʎƆ
 //tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=sǝlqqǝԀ ɹǝplƎ
 tile.space_matter.name=ɹǝʇʇɐW ǝɔɐdS
+//tile.space_obsidian.name=<newline>
 
 //tile.rewind_block.name=<newline>
 tile.koretato_block.name=ʞɔolq oʇɐʇǝɹoʞ
