--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -123,6 +123,7 @@ tile.cyan_bricks.name=青色磚塊
 //tile.cyan_brick_stairs.name=<newline>
 tile.elder_pebbles.name=遠古鵝卵石
 tile.space_matter.name=太空物質
+//tile.space_obsidian.name=<newline>
 
 //tile.rewind_block.name=<newline>
 tile.koretato_block.name=Koretato塊
