Added Balloons and small cleaning + Updated Ultimatuml

--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -30,6 +30,22 @@ tile.black_cloud_block.name=Black Cloud Block
 //tile.cheese_block.name=<newline>
 //tile.unstable_stone.name=<newline>
 //tile.ultimatum_portal.name=<newline>
+//tile.blue_balloon.name=<newline>
+//tile.light_blue_balloon.name=<newline>
+//tile.cyan_balloon.name=<newline>
+//tile.green_balloon.name=<newline>
+//tile.lime_balloon.name=<newline>
+//tile.yellow_balloon.name=<newline>
+//tile.orange_balloon.name=<newline>
+//tile.red_balloon.name=<newline>
+//tile.pink_balloon.name=<newline>
+//tile.magenta_balloon.name=<newline>
+//tile.purple_balloon.name=<newline>
+//tile.brown_balloon.name=<newline>
+//tile.white_balloon.name=<newline>
+//tile.light_gray_balloon.name=<newline>
+//tile.gray_balloon.name=<newline>
+//tile.black_balloon.name=<newline>
 
 tile.question_block.name=? Block
 tile.empty_block.name=Empty Block
@@ -57,7 +73,7 @@ tile.purple_mushroom.name=Purple Mushroom
 tile.white_mushroom.name=White Mushroom
 tile.light_gray_mushroom.name=Light Grey Mushroom
 tile.gray_mushroom.name=Grey Mushroom
-tile.white_mushroom.name=Black Mushroom
+tile.black_mushroom.name=Black Mushroom
 tile.blue_mushroom_block.name=Blue Mushroom Block
 tile.green_mushroom_block.name=Green Mushroom Block
 tile.yellow_mushroom_block.name=Yellow Mushroom Block
