--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -30,6 +30,22 @@ tile.salad.name=Salad
 tile.cheese_block.name=Cheese Block
 tile.unstable_stone.name=Unstable Stone
 tile.ultimatum_portal.name=Ultimatum Portal
+tile.blue_balloon.name=Blue Balloon
+tile.light_blue_balloon.name=Light Blue Balloon
+tile.cyan_balloon.name=Cyan Balloon
+tile.green_balloon.name=Green Balloon
+tile.lime_balloon.name=Lime Balloon
+tile.yellow_balloon.name=Yellow Balloon
+tile.orange_balloon.name=Orange Balloon
+tile.red_balloon.name=Red Balloon
+tile.pink_balloon.name=Pink Balloon
+tile.magenta_balloon.name=Magenta Balloon
+tile.purple_balloon.name=Purple Balloon
+tile.brown_balloon.name=Brown Balloon
+tile.white_balloon.name=White Balloon
+tile.light_gray_balloon.name=Light Gray Balloon
+tile.gray_balloon.name=Gray Balloon
+tile.black_balloon.name=Black Balloon
 
 tile.question_block.name=? Block
 tile.empty_block.name=Empty Block
@@ -57,7 +73,7 @@ tile.purple_mushroom.name=Purple Mushroom
 tile.white_mushroom.name=White Mushroom
 tile.light_gray_mushroom.name=Light Gray Mushroom
 tile.gray_mushroom.name=Gray Mushroom
-tile.white_mushroom.name=Black Mushroom
+tile.black_mushroom.name=Black Mushroom
 tile.blue_mushroom_block.name=Blue Mushroom Block
 tile.green_mushroom_block.name=Green Mushroom Block
 tile.yellow_mushroom_block.name=Yellow Mushroom Block
