--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -30,6 +30,22 @@ tile.footblock.name=blok foutbol
 //tile.cheese_block.name=<newline>
 //tile.unstable_stone.name=<newline>
 //tile.ultimatum_portal.name=<newline>
+//tile.blue_balloon.name=<newline>
+//tile.light_blue_balloon.name=<newline>
+//tile.cyan_balloon.name=<newline>
+//tile.green_balloon.name=<newline>
+//tile.lime_balloon.name=<newline>
+//tile.yellow_balloon.name=<newline>
+//tile.orange_balloon.name=<newline>
+//tile.red_balloon.name=<newline>
+//tile.pink_balloon.name=<newline>
+//tile.magenta_balloon.name=<newline>
+//tile.purple_balloon.name=<newline>
+//tile.brown_balloon.name=<newline>
+//tile.white_balloon.name=<newline>
+//tile.light_gray_balloon.name=<newline>
+//tile.gray_balloon.name=<newline>
+//tile.black_balloon.name=<newline>
 
 tile.question_block.name=bloc???
 tile.empty_block.name=bloc san rien lol
