--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -132,6 +132,7 @@ tile.green_hill_dirt.name=Grüne Hügelerde
 tile.marble_zone_stone.name=Marble-Zonenstein
 tile.yellow_studiopolis_clapper.name=Gelbe Studiopolis-Filmklappe
 tile.blue_studiopolis_clapper.name=Blaue Studiopolis-Filmklappe
+//tile.spring.name=<newline>
 
 tile.scarlet_grass_block.name=Scharlachroter Grassblock
 tile.scarlet_grass.name=Scharlachrotes Grass
