--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -132,6 +132,7 @@ tile.black_candy_cane_pillar.name=Black Candy Cane Pillar
 //tile.marble_zone_stone.name=<newline>
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
+//tile.spring.name=<newline>
 
 //tile.scarlet_grass_block.name=<newline>
 //tile.scarlet_grass.name=<newline>
