--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -132,6 +132,7 @@ tile.black_candy_cane_pillar.name=Zwarte zuurstokpillaar
 //tile.marble_zone_stone.name=<newline>
 tile.yellow_studiopolis_clapper.name=Gele studiopolisklepel
 tile.blue_studiopolis_clapper.name=Blauwe studiopolisklepel
+//tile.spring.name=<newline>
 
 //tile.scarlet_grass_block.name=<newline>
 //tile.scarlet_grass.name=<newline>
