--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -132,6 +132,7 @@ tile.purple_candy_cane_pillar.name=紫色拐杖糖支柱
 //tile.marble_zone_stone.name=<newline>
 //tile.yellow_studiopolis_clapper.name=<newline>
 //tile.blue_studiopolis_clapper.name=<newline>
+//tile.spring.name=<newline>
 
 //tile.scarlet_grass_block.name=<newline>
 //tile.scarlet_grass.name=<newline>
